docs: add missing payload data to POST/PUT openapi docs
